added font-awesome; more formatting.

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html>
 <head>
+
+  <script src="https://use.fontawesome.com/19f548446e.js"></script>
+
   <meta charset="utf-8">
   <title>Quiz Tool</title>
   <base href="/">
