--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,12 @@
   <title>Quiz Tool</title>
   <base href="/">
 
+    <!-- css -->
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/flatly/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/flatly/bootstrap.css">
+    <style>body { padding: 50px 0; }</style>
+
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
